@@ -5,3 +5,6 @@
 04/20/23    02:52PM     Boards can be generated with varying numbers of bombs and be printed into the grid.
 
             03:51PM     Board generation complete! non-bomb tiles know how many bombs they border, grid is printed nice and in color
+
+04/24/23    03:20PM     Implemented mouse input for left, right, and middle click. When a tile is left clicked, its value is revealed.
+                        Currently the game does not end when a bomb is hit and right and middle click don't do anything useful.
